# challengeLOCAL

./: .env  Dockerfile  Dockerfile.typesense  README.md  docker-compose.yml  pyproject.toml
src/movies_data_pipeline/api/: main.py
src/movies_data_pipeline/api/routes/: crud.py  gold.py  search.py  seed.py
src/movies_data_pipeline/controllers/: crud_controller.py  gold_controller.py  search_controller.py  seed_controller.py
src/movies_data_pipeline/data_access/: database.py  vector_db.py
src/movies_data_pipeline/data_access/data_lake/: goldavg_score_by_year.parquet  goldrevenue_by_genre.parquet  silverbridge_movie_crew.parquet  silverbridge_movie_genre.parquet  silverdim_country.parquet  silverdim_crew.parquet  silverdim_date.parquet  silverdim_genre.parquet  silverdim_language.parquet  silverdim_movie.parquet  silverdim_role.parquet  silverfactMoviePerformance.parquet
src/movies_data_pipeline/data_access/data_lake/bronze/: bronze_movies.parquet  imdb_movies.json  imdb_movies_20250406_222120.csv  movies.parquet
src/movies_data_pipeline/data_access/data_lake/gold/: avg_score_by_year.parquet  revenue_by_genre.parquet
src/movies_data_pipeline/data_access/data_lake/silver/: bridge_movie_crew.parquet  (+11 more)
src/movies_data_pipeline/data_access/models/: gold.py  gold_tables.py
src/movies_data_pipeline/domain/models/: bronze.py  movie.py
src/movies_data_pipeline/services/: bronze_data_service.py  bronze_service.py  etl_service.py  extractor_service.py  initialize_service.py  loader_service.py  search_service.py  search_service_adapter.py  transformer_service.py
